# alloul-web

./: .easignore  .gitignore  .vercelignore  ASSUMPTIONS.md  App.tsx  PHASE3_ALLOULQ_COMPLETE.md  alloul-backend-deploy.tgz  app.config.js  app.json  eas.json  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: mcp-ci.yml
alloulq-mcp/servers/workspace-mcp/: pyproject.toml
alloulq-mcp/servers/workspace-mcp/src/workspace_mcp/: __main__.py  config.py  database.py  models.py  schemas.py
alloulq-mcp/servers/workspace-mcp/src/workspace_mcp/integrations/: dailyco.py
alloulq-mcp/servers/workspace-mcp/src/workspace_mcp/tools/: crm.py  meetings.py  tasks.py  team.py
audits/: alloulq-workspace_AUDIT.md
backend/: .env.example  README.md  admin_access.py  auth.py  azure_ad_verify.py  billing_engine.py  config.py  firebase_verify.py  main.py  models.py  requirements.txt  schemas.py  schemas_company.py
backend/deploy/: alloul-api.service
backend/routers/: accounting.py  admin.py  agent.py  auth.py  billing.py  calls.py  careers.py  channels.py  companies.py  daily_workspace.py  employees.py  handover.py  job_postings.py  livekit.py  notifications.py  recruitment.py  security.py  webhooks.py  work_agent.py
backend/scripts/: add_users_phone_postgres.sql  fix_db_schema.sql  grant_company_membership.py
backend/services/: ai_service.py  crypto_service.py  shukra_bot.py  (+3 more)
docs/: frontend-refactor-audit-map.md  livekit-rebuild-plan.md  production-architecture-audit.md
web/: .env.prod  next.config.js  package-lock.json  package.json  vercel.json
(+280 files in other folders)
