[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workspace-mcp"
version = "0.1.0"
description = "ALLOUL&Q Workspace MCP Server — CRM, Tasks, Team, Meetings, Handover"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "arrow>=1.3.0",
    "python-dateutil>=2.9.0",
    "mcp-core",
]

[project.scripts]
workspace-mcp = "workspace_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workspace_mcp"]

[tool.mypy]
strict = true
python_version = "3.11"
